Upgrade to 0.16.0 BQ incremental syntax

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -11,6 +11,8 @@ analysis-paths: ["analysis"]
 data-paths: ["data"]
 macro-paths: ["macros"]
 
+require-dbt-version: ">=0.16.0"
+
 models:
   snowplow:
     base:
